# discern

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cairorender.rs  clispam-main.rs  core.rs  cosmic-main.rs  data.rs  gamescope-main.rs  macros.rs  main.rs  rpc-main.rs  statefile-main.rs  wlroots-main.rs  x11-main.rs
src/clispam/: mod.rs
src/rpc/: mod.rs
src/statefile/: mod.rs
src/wlroots/: mod.rs
src/x11/: mod.rs
