[package]
name = "discern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = { version = "*" }
pin-project = "1.0"
futures-channel = "0.3"
url = "*"
http = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.12"
termion = "1.5"
clap = { version = "*", features = ["cargo"] }
glib = "0.15.10"
glib-sys = "0.15.10"
gdk = {version = "0.15.4", features= ["v3_22"]}
gtk = "0.15.4"
gtk-layer-shell = "0.2.6"
gio = "0.15.11"
futures = "0.3"