[package]
name = "discern"
version = "0.1.0"
edition = "2021"

[[bin]]
name="discern"
path="src/main.rs"

[[bin]]
name="discern-wlr"
path="src/wlroots-main.rs"
required-features=["wlroots"]

[[bin]]
name="discern-x11"
path="src/x11-main.rs"
required-features=["x11"]

[[bin]]
name="discern-rpc"
path="src/rpc-main.rs"
required-features=["rpc"]

[[bin]]
name="discern-clispam"
path="src/clispam-main.rs"
required-features=["clispam"]

[[bin]]
name="discern-statefile"
path="src/statefile-main.rs"
required-features=["statefile"]

[[bin]]
name="discern-gamescope"
path="src/gamescope-main.rs"
required-features=["gamescope"]

[[bin]]
name="discern-cosmic"
path="src/cosmic-main.rs"
required-features=["cosmic"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures-util = { version = "*" }
pin-project = "1.0"
futures-channel = "0.3"
url = "*"
http = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui = "0.12"
termion = "1.5"
clap = { version = "^3.2.5", features = ["cargo"] }
glib = { version ="0.15.10", optional = true }
glib-sys ={ version = "0.15.10", optional = true }
gdk = {version = "0.15.4", features= ["v3_22"], optional = true }
gtk = { version ="0.15.4", optional = true }
gtk-layer-shell = { version ="*", optional = true }
gio = { version ="0.15.11", optional = true }
futures = "0.3"
bytes = "*"
cairo-rs = {version="0.15.11", features=["png", "xcb"], optional=true}
string-builder = "0.2.0"
xcb = {version = "1.1.1", optional = true }
xcb-sys = { version ="0.2.1", optional = true }
cairo-sys-rs = {version="0.15.1", optional=true}
wayland-backend = "0.3.5"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
optional = true
features = ["wayland", "tokio", "applet"]


[dependencies.iced_sctk]
git = "https://github.com/pop-os/libcosmic"
optional = true

[dependencies.cosmic-panel-config]
git = "https://github.com/pop-os/cosmic-panel"
optional = true

[features]
wlroots=[ "dep:gtk-layer-shell", "dep:cairo-rs", "dep:glib", "dep:gtk", "dep:gdk", "dep:gio", "state_hash", "avatardownloader"]
x11=[ "dep:glib", "dep:gtk", "dep:gdk", "dep:gio","dep:cairo-rs", "state_hash", "avatardownloader"]
clispam=[]
statefile=[]
gamescope=["dep:xcb", "dep:xcb-sys", "dep:cairo-rs", "dep:cairo-sys-rs", "avatardownloader"]
rpc=[]
cosmic=["dep:libcosmic","avatardownloader", "dep:iced_sctk", "dep:cosmic-panel-config"]
default=['statefile', "wlroots", "gamescope", "clispam", "cosmic","x11","rpc"]

state_hash=[]
avatardownloader=[]